--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,114 @@
+/* Reset Style Begin */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+}
+
+html,
+body,
+div,
+span,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+pre,
+a,
+code,
+img,
+sub,
+sup,
+b,
+u,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figure,
+figcaption,
+footer,
+header,
+main,
+menu,
+nav,
+section,
+summary {
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* Reset Styles End */
+
 .global {
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(270deg,
-      rgba(0, 219, 222, 0.5) 0%,
-      rgba(252, 0, 255, 0.6) 100%);
+  background: linear-gradient(
+    -45deg,
+    rgba(238, 118, 82, 0.639),
+    rgba(231, 60, 126, 0.62),
+    rgba(252, 0, 255, 0.6),
+    rgba(35, 165, 213, 0.576),
+    rgba(35, 213, 171, 0.612),
+    rgba(0, 219, 222, 0.5)
+  );
+  background-size: 400% 400%;
+  -webkit-animation: gradient 20s ease infinite;
+  animation: gradient 20s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 header {
@@ -26,7 +131,7 @@ header {
   color: #fff;
   font-family: sans-serif;
   font-size: 40px;
-  margin-left: 4rem;
+  margin-left: 4em;
   align-self: center;
 }
 
@@ -38,7 +143,7 @@ header {
   text-shadow: 0px 2.5px 5px white;
 }
 
-.inputcontaier {
+.inputcontainer {
   position: relative;
   top: -40px;
   z-index: 1;
@@ -49,12 +154,12 @@ header {
   gap: 10px 0;
 }
 
-.inputcontaier .input {
+.inputcontainer .input {
   display: flex;
   justify-content: center;
 }
 
-.inputcontaier .input input {
+.inputcontainer .input input {
   padding: 5px 10px;
   width: 35rem;
   border-color: rgba(105, 105, 105, 0.14);
@@ -69,13 +174,13 @@ header {
   font-size: 20px;
 }
 
-.inputcontaier .input input::-webkit-input-placeholder {
+.inputcontainer .input input::-webkit-input-placeholder {
   color: gray;
   font-weight: 600;
   align-items: center;
 }
 
-.inputcontaier .input button {
+.inputcontainer .input button {
   padding: 0 25px;
   background-color: #ecf1fa;
   height: 3rem;
@@ -87,13 +192,13 @@ header {
   align-items: center;
 }
 
+.inputcontainer .input button:active {
+  background-color: #93b9ff;
+}
+
 .scndbtn {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-}
-
-.inputcontaier .input button:active {
-  background-color: #93b9ff;
 }
 
 .popup {
@@ -105,12 +210,12 @@ header {
   -ms-user-select: none;
   user-select: none;
   left: 50%;
-  transform: translate(-50%, 0);
   top: -5px;
+  -o-transform: translate(-50%, 0);
   -webkit-transform: translate(-50%, 0);
   -moz-transform: translate(-50%, 0);
   -ms-transform: translate(-50%, 0);
-  -o-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
 }
 
 .popup .popuptext {
@@ -120,17 +225,17 @@ header {
   color: #fff;
   text-align: center;
   font-family: sans-serif;
-  border-radius: 6px;
   padding: 8px 0;
   position: absolute;
   z-index: 1;
   bottom: 125%;
   left: 50%;
   margin-left: -80px;
+  -o-border-radius: 6px;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   -ms-border-radius: 6px;
-  -o-border-radius: 6px;
+  border-radius: 6px;
 }
 
 .popup .popuptext::after {
@@ -141,8 +246,8 @@ header {
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  -webkit-animation: fadeIn 1s;
   border-color: red transparent transparent transparent;
+  -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
 }
 
@@ -152,16 +257,31 @@ header {
   animation: fadeIn 1s;
 }
 
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
+.todo {
+  padding: 8px 15px;
+  width: 35rem;
+  font-family: sans-serif;
+  font-weight: 600;
+  outline: none;
+  padding-left: 1rem;
+  font-size: 20px;
+  background: white;
+  cursor: pointer;
+  -o-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
+}
+.index {
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 600;
+  font-size: 22px;
+  font-family: serif;
+  margin-right: 10px;
 }
 
+/* Animations section */
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -171,38 +291,4 @@ header {
     opacity: 1;
   }
 }
-
-.div {
-  padding: 8px 15px;
-  width: 35rem;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  outline: none;
-  padding-left: 1rem;
-  font-size: 20px;
-  background: white;
-  cursor: pointer;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-}
-
-.fa-sort-alpha-down-alt::before {
-  content: '\f881';
-}
-
-.fa-sort-alpha-down::before {
-  content: '\f15d';
-}
-
-.fas {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  display: var(--fa-display, inline-block);
-  font-style: normal;
-  font-variant: normal;
-  line-height: 1;
-  text-rendering: auto;
-}
+/* todo: add responsive */
